--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<color name="transparent">#00000000</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+	<color name="primary">#7A8FFF</color>
+
+	<color name="positive">#32ADE6</color>
+	<color name="negative">#C00F0C</color>
+
+	<color name="gray_10">#D2D2D2</color>
+	<color name="gray_50">#9C9C9C</color>
+	<color name="gray_100">#707070</color>
+
+
 </resources>
