--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Base.Theme.JiKiGo" parent="Theme.Material3.DayNight.NoActionBar">
+	<style name="Base.Theme.JikiGo" parent="Theme.Material3.DayNight.NoActionBar">
 		<!-- Customize your light theme here. -->
 		<!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+		<item name="colorPrimary">@color/primary</item>
+		<item name="colorOnPrimary">@color/white</item>
+		<item name="android:colorBackground">@color/white</item>
 	</style>
 
-	<style name="Theme.JiKiGo" parent="Base.Theme.JiKiGo" />
+	<style name="Theme.JikiGo" parent="Base.Theme.JikiGo" />
 </resources>
