--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="TodayNewsCustomTabText">
+    <style name="NewsCustomTabText">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item> <!-- 선택된 탭 글씨 굵게 -->
     </style>
