--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
 	<color name="transparent">#00000000</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+	<color name="red">#FF0000</color>
 	<color name="primary">#7A8FFF</color>
-
 	<color name="positive">#32ADE6</color>
 	<color name="negative">#C00F0C</color>
 
