--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,9 @@
 		<item name="titleCentered">true</item>
 		<item name="android:background">@color/white</item>
 	</style>
+
+	<style name="NewsCustomTabText">
+		<item name="android:textSize">16sp</item>
+		<item name="android:textStyle">bold</item> <!-- 선택된 탭 글씨 굵게 -->
+	</style>
 </resources>
