--- a/app/src/main/res/layout/fragment_news_environment_air.xml
+++ b/app/src/main/res/layout/fragment_news_environment_air.xml
@@ -60,14 +60,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <!-- Indicator (ViewPager의 점 표시) 나중에 프래그먼트에서 연결하기-->
+<!--        &lt;!&ndash; Indicator (ViewPager의 점 표시) 나중에 프래그먼트에서 연결하기&ndash;&gt;-->
 <!--        <me.relex.circleindicator.CircleIndicator3-->
 <!--            android:id="@+id/indicator_news_environment_air_hot_topic"-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_gravity="center"-->
 <!--            app:ci_animator="@animator/scale_with_alpha"-->
-<!--            app:ci_drawable="@drawable/item_news_banner_blue_radius"-->
 <!--            app:ci_drawable_selected="@drawable/item_news_banner_blue_radius"-->
 <!--            app:ci_drawable_unselected="@drawable/item_news_banner_gray_radius"-->
 <!--            app:ci_height="8dp"-->
@@ -107,4 +106,5 @@
         android:nestedScrollingEnabled="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/row_latest_news" />
+
 </LinearLayout>
