--- a/app/src/main/res/layout/fragment_sign_up_second.xml
+++ b/app/src/main/res/layout/fragment_sign_up_second.xml
@@ -64,32 +64,25 @@
 				app:layout_constraintStart_toEndOf="@id/tv_sign_up_name_label"
 				app:layout_constraintTop_toTopOf="@id/tv_sign_up_name_label" />
 
-			<EditText
+			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/et_sign_up_name"
 				android:layout_width="0dp"
-				android:layout_height="50dp"
+				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
 				android:layout_marginTop="5dp"
-				android:background="@drawable/selector_et"
-				android:hint="@string/common_name"
-				android:inputType="text"
-				android:maxLength="8"
-				android:paddingStart="20dp"
-				android:textSize="14sp"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name_label" />
+				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name_label">
 
-			<TextView
-				android:id="@+id/tv_sign_up_name_error"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="사용 가능한 이름입니다."
-				android:textColor="@color/positive"
-				android:visibility="gone"
-				app:layout_constraintStart_toStartOf="@id/et_sign_up_name"
-				app:layout_constraintTop_toBottomOf="@id/et_sign_up_name"
-				tools:visibility="visible" />
+				<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:hint="@string/common_name"
+					android:inputType="text"
+					android:maxLength="8"
+					android:textSize="14sp" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 
 			<TextView
@@ -100,7 +93,7 @@
 				android:text="@string/common_mobile"
 				android:textStyle="bold"
 				app:layout_constraintStart_toStartOf="@id/tv_sign_up_personal_label"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name_error" />
+				app:layout_constraintTop_toBottomOf="@id/et_sign_up_name" />
 
 			<TextView
 				android:layout_width="wrap_content"
@@ -112,21 +105,25 @@
 				app:layout_constraintStart_toEndOf="@id/tv_sign_up_mobile_label"
 				app:layout_constraintTop_toTopOf="@id/tv_sign_up_mobile_label" />
 
-			<EditText
+			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/et_sign_up_mobile"
 				android:layout_width="0dp"
-				android:layout_height="50dp"
+				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
 				android:layout_marginTop="5dp"
-				android:background="@drawable/selector_et"
-				android:hint="@string/common_mobile_no_hyphen"
-				android:inputType="number"
-				android:maxLength="11"
-				android:paddingStart="20dp"
-				android:textSize="14sp"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mobile_label" />
+				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mobile_label">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:hint="@string/common_mobile_no_hyphen"
+					android:inputType="phone"
+					android:maxLength="11"
+					android:textSize="14sp" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 
 			<androidx.appcompat.widget.AppCompatButton
@@ -160,21 +157,25 @@
 				app:layout_constraintStart_toEndOf="@id/tv_sign_up_auth_number_label"
 				app:layout_constraintTop_toTopOf="@id/tv_sign_up_auth_number_label" />
 
-			<EditText
+			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/et_sign_up_auth_number"
 				android:layout_width="0dp"
-				android:layout_height="50dp"
+				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
 				android:layout_marginTop="5dp"
-				android:background="@drawable/selector_et"
-				android:hint="@string/common_auth_number"
-				android:inputType="number"
-				android:maxLength="11"
-				android:paddingStart="20dp"
-				android:textSize="14sp"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_auth_number_label" />
+				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_auth_number_label">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:hint="@string/common_auth_number"
+					android:inputType="number"
+					android:maxLength="11"
+					android:textSize="14sp" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 			<androidx.appcompat.widget.AppCompatButton
 				android:id="@+id/btn_sign_up_auth_number"
@@ -220,21 +221,25 @@
 				app:layout_constraintStart_toEndOf="@id/tv_sign_up_id_label"
 				app:layout_constraintTop_toTopOf="@id/tv_sign_up_id_label" />
 
-			<EditText
+			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/et_sign_up_id"
 				android:layout_width="0dp"
-				android:layout_height="50dp"
+				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
 				android:layout_marginTop="5dp"
-				android:background="@drawable/selector_et"
-				android:hint="@string/common_id"
-				android:inputType="number"
-				android:maxLength="16"
-				android:paddingStart="20dp"
-				android:textSize="14sp"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id_label" />
+				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id_label">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:hint="@string/common_id"
+					android:inputType="textPassword"
+					android:maxLength="16"
+					android:textSize="14sp" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 
 			<androidx.appcompat.widget.AppCompatButton
@@ -313,9 +318,9 @@
 				android:layout_width="0dp"
 				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
-				app:hintEnabled="false"
 				android:layout_marginTop="5dp"
 				app:endIconMode="password_toggle"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw_check_label">
@@ -349,21 +354,25 @@
 				app:layout_constraintStart_toEndOf="@id/tv_sign_up_nickname_label"
 				app:layout_constraintTop_toTopOf="@id/tv_sign_up_nickname_label" />
 
-			<EditText
+			<com.google.android.material.textfield.TextInputLayout
 				android:id="@+id/et_sign_up_nickname"
 				android:layout_width="0dp"
-				android:layout_height="50dp"
+				android:layout_height="54dp"
 				android:layout_marginHorizontal="30dp"
 				android:layout_marginTop="5dp"
-				android:background="@drawable/selector_et"
-				android:hint="@string/common_nickname"
-				android:inputType="text"
-				android:maxLength="10"
-				android:paddingStart="20dp"
-				android:textSize="14sp"
+				app:hintEnabled="false"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_nickname_label" />
+				app:layout_constraintTop_toBottomOf="@id/tv_sign_up_nickname_label">
+
+				<com.google.android.material.textfield.TextInputEditText
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:hint="@string/common_nickname"
+					android:inputType="text"
+					android:maxLength="10"
+					android:textSize="14sp" />
+			</com.google.android.material.textfield.TextInputLayout>
 
 			<androidx.appcompat.widget.AppCompatButton
 				android:id="@+id/btn_sign_up_nickname"
