--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -52,4 +52,56 @@
             app:layout_constraintBottom_toBottomOf="@id/cl_notification_top_container"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        android:id="@+id/sv_notification"
+        layout="@layout/custom_search_view"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_notification_top_container" />
+
+    <!-- 검색 결과 텍스트 (초기 GONE, 검색 후 VISIBLE) -->
+    <TextView
+        android:id="@+id/tv_notification_search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="총 0건의 검색결과가 있습니다."
+        android:textSize="11sp"
+        android:textColor="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@id/sv_notification"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"/>
+
+    <!-- "전체보기" 버튼 (초기 GONE, 검색 후 VISIBLE) -->
+    <TextView
+        android:id="@+id/tv_notification_view_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:text="전체보기"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sv_notification" />
+
+
+    <!-- 공지사항 리스트 (RecyclerView) -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_notification"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_notification_search_result"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
+        tools:listitem="@layout/row_notification"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
