--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 	<color name="primary">#7A8FFF</color>
 	<color name="positive">#32ADE6</color>
 	<color name="negative">#C00F0C</color>
+	<color name="payment_background">#1C1D21</color>
 
 	<color name="gray_10">#D2D2D2</color>
 	<color name="gray_50">#9C9C9C</color>
