--- a/app/src/main/res/layout/fragment_payment_qr.xml
+++ b/app/src/main/res/layout/fragment_payment_qr.xml
@@ -19,7 +19,7 @@
 		app:title="결제"
 		app:titleTextColor="@color/white" />
 
-	<com.google.android.material.imageview.ShapeableImageView
+	<androidx.appcompat.widget.AppCompatImageView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:src="@drawable/ic_location"
