--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,19 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/main"
+	android:id="@+id/home"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".MainActivity">
+	tools:context=".HomeActivity">
 
 	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/container_main"
+		android:id="@+id/container_home"
+		android:name="androidx.navigation.fragment.NavHostFragment"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
-		android:name="com.protect.jikigo.LoginFragment"
+		app:defaultNavHost="true"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toTopOf="parent"
+		app:navGraph="@navigation/home_graph" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
