--- a/app/src/main/res/layout/fragment_sign_up_first.xml
+++ b/app/src/main/res/layout/fragment_sign_up_first.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".SignUpFirstFragment">
+	tools:context=".ui.login.SignUpFirstFragment">
 
 	<com.google.android.material.appbar.MaterialToolbar
 		android:id="@+id/toolbar_sign_up"
