--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,10 @@
 		<item name="android:textSize">16sp</item>
 		<item name="android:textStyle">bold</item> <!-- 선택된 탭 글씨 굵게 -->
 	</style>
+
+	<!--  이미지 원형으로 만들기  -->
+	<style name="RankingMyProfileRoundedImage" >
+		<item name="cornerSize">50%</item>
+	</style>
+
 </resources>
