--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/home_graph">
+	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/home_graph"
+	app:startDestination="@id/navigation_home">
+
+	<fragment
+		android:id="@+id/navigation_home"
+		android:name="com.protect.jikigo.ui.home.HomeFragment"
+		android:label="홈"
+		tools:layout="@layout/fragment_home" />
 
 </navigation>
