--- a/app/src/main/res/drawable/background_qr.xml
+++ b/app/src/main/res/drawable/background_qr.xml
@@ -3,4 +3,7 @@
 	android:shape="rectangle">
 	<solid android:color="@color/white" />
 	<corners android:radius="15dp" />
+	<stroke
+		android:width="1dp"
+		android:color="@color/gray_10" />
 </shape>
