--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,9 @@
 		<item name="navigationIcon">@drawable/ic_arrow_back</item>
 		<item name="titleCentered">true</item>
 	</style>
+
+	<!-- 탭 텍스트 사이즈 -->
+	<style name="TabText" parent="TextAppearance.Design.Tab">
+		<item name="android:textSize">14sp</item>
+	</style>
 </resources>
