Rename: 패키지 변경

--- a/app/src/main/res/layout/fragment_payment_qr.xml
+++ b/app/src/main/res/layout/fragment_payment_qr.xml
@@ -5,7 +5,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/payment_background"
-	tools:context=".PaymentQRFragment">
+	tools:context=".ui.payment.PaymentQRFragment">
 
 	<com.google.android.material.appbar.MaterialToolbar
 		style="@style/AppToolbar"
