--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-tools:context=".NewsDetailFragment">
+tools:context=".ui.news.NewsDetailFragment">
 
     <!-- 툴바 -->
     <androidx.appcompat.widget.Toolbar
