--- a/app/src/main/res/layout/fragment_payment_qr_dialog.xml
+++ b/app/src/main/res/layout/fragment_payment_qr_dialog.xml
@@ -5,7 +5,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:background="@drawable/background_dialog"
-	tools:context=".PaymentQRDialogFragment">
+	tools:context=".ui.payment.PaymentQRDialogFragment">
 
 	<View
 		android:id="@+id/view_handle"
