--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -9,7 +9,7 @@
 		android:id="@+id/navigation_home"
 		android:name="com.protect.jikigo.ui.home.HomeFragment"
 		android:label="홈"
-		tools:layout="@layout/fragment_home" >
+		tools:layout="@layout/fragment_home">
 		<action
 			android:id="@+id/action_navigation_home_to_notification"
 			app:destination="@id/notification" />
@@ -22,12 +22,15 @@
 		<action
 			android:id="@+id/action_navigation_home_to_myPage"
 			app:destination="@id/myPage" />
+		<action
+			android:id="@+id/action_navigation_home_to_travel"
+			app:destination="@id/navigation_travel" />
 	</fragment>
 	<fragment
 		android:id="@+id/notification"
 		android:name="com.protect.jikigo.NotificationFragment"
 		android:label="fragment_notification"
-		tools:layout="@layout/fragment_notification" >
+		tools:layout="@layout/fragment_notification">
 		<action
 			android:id="@+id/action_notification_to_notificationDetail"
 			app:destination="@id/notificationDetail" />
@@ -57,5 +60,10 @@
 		android:name="com.protect.jikigo.MyPageFragment"
 		android:label="fragment_my_page"
 		tools:layout="@layout/fragment_my_page" />
+	<fragment
+		android:id="@+id/navigation_travel"
+		android:name="com.protect.jikigo.TravelFragment"
+		android:label="fragment_travel"
+		tools:layout="@layout/fragment_travel" />
 
 </navigation>
