--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,6 @@
 		<item name="android:textSize">14sp</item>
 	</style>
 
-
 	<style name="AppToolbar" parent="Widget.Material3.Toolbar">
 		<item name="navigationIcon">@drawable/ic_arrow_back</item>
 		<item name="titleCentered">true</item>
@@ -31,5 +30,12 @@
 	<style name="RankingMyProfileRoundedImage" >
 		<item name="cornerSize">50%</item>
 	</style>
+
+	<!-- 탭 텍스트 사이즈 -->
+	<style name="TabText" parent="TextAppearance.Design.Tab">
+		<item name="android:textSize">14sp</item>
+	</style>
+
+
 
 </resources>
