--- a/app/src/main/res/layout/fragment_attend_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_attend_bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".AttendBottomSheetFragment">
+    tools:context=".ui.reward.AttendBottomSheetFragment">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:id="@+id/bottom_handle"
