--- a/app/src/main/res/layout/fragment_electric_vehicle_confirm.xml
+++ b/app/src/main/res/layout/fragment_electric_vehicle_confirm.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ElectricVehicleConfirmFragment">
+    tools:context=".ui.reward.ElectricVehicleConfirmFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_electric_vehicle_confirm"
