--- a/app/src/main/res/layout/fragment_news_environment_all.xml
+++ b/app/src/main/res/layout/fragment_news_environment_all.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.news.NewsEnvironmentAllFragment">
+    tools:context=".ui.home.news.NewsEnvironmentAllFragment">
 
     <!-- 첫번째 뉴스 -->
     <ImageView
