--- a/app/src/main/res/layout/fragment_travel_home.xml
+++ b/app/src/main/res/layout/fragment_travel_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TravelHomeFragment">
+    tools:context=".ui.travel.TravelHomeFragment">
 
     <com.google.android.material.search.SearchBar
         android:id="@+id/searchBar"
