--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -28,7 +28,7 @@
 	</fragment>
 	<fragment
 		android:id="@+id/notification"
-		android:name="com.protect.jikigo.NotificationFragment"
+		android:name="com.protect.jikigo.ui.home.noti.NotificationFragment"
 		android:label="fragment_notification"
 		tools:layout="@layout/fragment_notification">
 		<action
@@ -37,12 +37,12 @@
 	</fragment>
 	<fragment
 		android:id="@+id/notificationDetail"
-		android:name="com.protect.jikigo.NotificationDetailFragment"
+		android:name="com.protect.jikigo.ui.home.noti.NotificationDetailFragment"
 		android:label="fragment_notification_detail"
 		tools:layout="@layout/fragment_notification_detail" />
 	<fragment
 		android:id="@+id/newsEnvironment"
-		android:name="com.protect.jikigo.ui.news.NewsEnvironmentFragment"
+		android:name="com.protect.jikigo.ui.home.news.NewsEnvironmentFragment"
 		android:label="fragment_news_environment"
 		tools:layout="@layout/fragment_news_environment" />
 	<fragment
@@ -57,13 +57,47 @@
 		tools:layout="@layout/fragment_reward" />
 	<fragment
 		android:id="@+id/myPage"
-		android:name="com.protect.jikigo.MyPageFragment"
+		android:name="com.protect.jikigo.ui.home.my_page.MyPageFragment"
 		android:label="fragment_my_page"
-		tools:layout="@layout/fragment_my_page" />
+		tools:layout="@layout/fragment_my_page" >
+		<action
+			android:id="@+id/action_myPage_to_profileEditFragment"
+			app:destination="@id/profileEditFragment" />
+		<action
+			android:id="@+id/action_myPage_to_pointHistoryFragment"
+			app:destination="@id/pointHistoryFragment" />
+		<action
+			android:id="@+id/action_myPage_to_couponBoxFragment"
+			app:destination="@id/couponBoxFragment" />
+	</fragment>
 	<fragment
 		android:id="@+id/navigation_travel"
-		android:name="com.protect.jikigo.TravelFragment"
+		android:name="com.protect.jikigo.ui.travel.TravelFragment"
 		android:label="fragment_travel"
 		tools:layout="@layout/fragment_travel" />
+	<fragment
+		android:id="@+id/profileEditFragment"
+		android:name="com.protect.jikigo.ui.home.my_page.ProfileEditFragment"
+		android:label="fragment_profile_edit"
+		tools:layout="@layout/fragment_profile_edit" />
+	<fragment
+		android:id="@+id/pointHistoryFragment"
+		android:name="com.protect.jikigo.ui.home.my_page.PointHistoryFragment"
+		android:label="fragment_point_history"
+		tools:layout="@layout/fragment_point_history" />
+	<fragment
+		android:id="@+id/couponBoxFragment"
+		android:name="com.protect.jikigo.ui.home.my_page.CouponBoxFragment"
+		android:label="fragment_coupon_box"
+		tools:layout="@layout/fragment_coupon_box" >
+		<action
+			android:id="@+id/action_couponBoxFragment_to_couponDetailFragment"
+			app:destination="@id/couponDetailFragment" />
+	</fragment>
+	<fragment
+		android:id="@+id/couponDetailFragment"
+		android:name="com.protect.jikigo.ui.home.my_page.CouponDetailFragment"
+		android:label="fragment_coupon_detail"
+		tools:layout="@layout/fragment_coupon_detail" />
 
 </navigation>
