--- a/app/src/main/res/layout/fragment_point_history.xml
+++ b/app/src/main/res/layout/fragment_point_history.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/calendar_point_history"
         android:layout_height="wrap_content"
-        android:text="2일 일요일" />
+        tools:text="2일 일요일" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_point_history"
